gcc/testsuite/gdc.test/compilable/imports/imp16460.d
module imports.imp16460;

package enum val = 0;
