gcc/testsuite/gdc.test/fail_compilation/imports/imp2.d
module imports.imp2;

enum X = 2;
enum Y = 2;
enum Z = 2;
